--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eagleviewjeweletch",
+  "name": "simpleshop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
