--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "emailjs-com": "^3.2.0",
     "marquee": "^0.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
